--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400,700,600,400italic,700italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <app-root>Loading...</app-root>
